clusters/production/network/gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.70.150
  listeners:
    - protocol: TLS
      port: 443
      name: tls-passthrough
      hostname: "*.mill3r.la"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.mill3r.la"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-homelab
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: mill3r.la
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-homelab
      allowedRoutes:
        namespaces:
          from: All
